--- a/assets/css/global/hero.css
+++ b/assets/css/global/hero.css
@@ -1,10 +1,19 @@
-#hero {
+#hero{
     display: table;
     width: 100%;
-    height: 90vh;
-    background: url(../../img/hero/project.png) center center;
-    background-size: cover;
+    height: 70vh;
+
   }
+#hero.banner1{
+  background: url(../../img/hero/project.png) center center;
+  background-size: cover;
+  background-attachment: fixed;
+}
+#hero.banner2{
+  background: url(../../img/hero/project2.webp) center center;
+  background-size: cover;
+  background-attachment: fixed;
+}
   @media (min-width: 1024px) {
     #hero {
       background-attachment: fixed;
@@ -26,7 +35,14 @@
     text-align: center;
     vertical-align: middle;
   }
-  
+  #hero .autoras h1{
+    letter-spacing: 3px;
+    margin-left: 20px;
+    font-size: 30px;
+    text-align: center;
+    opacity: 0.7;
+  }
+
   #hero h1 {
     margin: 30px 0 10px 0;
     font-weight: 700;
@@ -34,7 +50,7 @@
     text-transform: uppercase;
     color: #fff;
   }
-  
+
   @media (max-width: 768px) {
     #hero h1 {
       font-size: 28px;
