--- a/assets/css/colors.css
+++ b/assets/css/colors.css
@@ -40,6 +40,18 @@
   .cor-p5 {
     color: var(--cor-p5);
   }
+    .cor-p6 {
+    color: var(--cor-p6);
+  }
+    .cor-p7 {
+    color: var(--cor-p7);
+  }
+    .cor-p8 {
+    color: var(--cor-p8);
+  }
+      .cor-p9 {
+    color: var(--cor-p9);
+  }
 
   /* class cor cinza */
 .cor-00 {
