--- a/assets/css/global/global.css
+++ b/assets/css/global/global.css
@@ -16,6 +16,7 @@ body {
     margin: 0px;
     font-family: Arial, Helvetica, sans-serif;
     color: var(--cor-11);
+    overflow: auto;
   }
   /* a, ul reset */
   ul {
