--- a/assets/css/global/header.css
+++ b/assets/css/global/header.css
@@ -5,26 +5,32 @@
 /* header img */
 .header img {
   width: 100%;
-  height: 32px;
+  max-width: 8.75rem;
 }
 /* Header */
 .header {
+  position: relative;
   display: flex;
   gap: 1rem;
   justify-content: space-between;
   padding: 2rem;
   align-items: center;
+  z-index: 999;
 }
-.mobile-nav-toggle {
+.header_menu_items {
+  display: flex;
+  gap: clamp(1rem, 3vw, 3rem);
+  align-self: center;
+  /* text-transform: uppercase; */
+}
+.header_menu_items a{
+  color: #735E4F;
+}
+.mobile_nav_toggle {
     display: none;
   }
 /* Header menu */
 .header_menu {
   align-items: center;
 }
-.header_menu_items {
-  display: flex;
-  gap: clamp(1rem, 3vw, 3rem);
-  align-self: center;
-  text-transform: uppercase;
-}
+
