--- a/assets/css/utilities/tipografia.css
+++ b/assets/css/utilities/tipografia.css
@@ -12,7 +12,7 @@
 }
 .font-1-m,
 .font-1-m-b {
-  font: 400 1.125rem/1.35 "Poppins", sans-serif;
+  font: 400 1.125rem/1.35 "BS", sans-serif;
 }
 .font-1-m-b {
   font-weight: 600;
@@ -51,9 +51,18 @@
   .font-2-l-b {
     font-size: 1.125rem;
   }
+    .font-1-m {
+    text-wrap: nowrap;
+    font-size: 16px;
+  }
 }
 @media (max-width: 800px) {
   .font-1-xxl{
     font-size: 2rem;
+  }
+  .font-1-m {
+    text-wrap: nowrap;
+    font-size: 14px;
+    font-weight: 400;
   }
 }
