--- a/assets/css/components/banner_fix.css
+++ b/assets/css/components/banner_fix.css
@@ -1,9 +1,9 @@
 /* Tamanho Banner */
 #banner {
   display: table;
-  width: 100vw;
+  width: 100%;
   height: 70vh;
-  margin-bottom: 80px;
+  margin-bottom: 8rem;
 }
 /* imagem banner */
 #banner.banner_fixed {
@@ -13,8 +13,8 @@
 }
 /* banner color */
 #banner .banner_container {
-  background-color: hsl(0 0% 0% /0.5);
-  /* box-shadow: inset 0px -180px var(--cor-p1-1); */
+  background-color: hsl(0 0% 0% /0.3);
+  box-shadow: inset 0px -5px 28px 2px rgba(0, 0, 0, 0.4);
   display: table-cell;
   margin: 0;
   padding: 0;
