--- a/assets/css/home/sobre_nos.css
+++ b/assets/css/home/sobre_nos.css
@@ -1,70 +1,79 @@
 /* sobre nos */
 #home .sobre_nos {
   display: grid;
+  margin-bottom: 120px;
 }
+
 /* title */
 #home .sobre_nos h2 {
   margin-bottom: 80px;
   justify-self: center;
+  font-size: 3rem;
+}
+/* img */
+.sobre_nos img {
+  width: 400px;
+  height: 400px;
+  object-fit: cover;
 }
 /* persons */
-#home .persons {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
+.persons {
+  display: flex;
+  flex-direction: column;
+  gap: clamp(5rem, 3vw, 3rem);
 }
-
-#home .persons h3 {
-  margin-bottom: 20px;
+.person_0_grid {
+  display: none;
 }
-/* person 1 */
-#home .person_1_grid {
-  display: grid;
-  grid-column: 1;
-  grid-row: 1;
+.person_0 {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 2.5rem;
+}
+.person_0_text .tittle {
+}
+.person_0_text {
+  text-align: center;
+  padding: 1rem;
+  line-height: 1.5rem;
+}
+.person_1_grid {
+  display: flex;
   position: relative;
-  grid-column: 1/ 3;
-
 }
-#home .person_1 img {
-  position: relative;
-  object-fit: contain;
-  object-position: left;
-  height: 300px;
+.person_1 {
 }
-#home .person_1_text {
+.person_1_text {
   position: absolute;
-  padding: 20px;
+  max-width: 500px;
   background-color: var(--cor-p1);
-  top: 20px;
-  left: 200px;
-  grid-column: 1/ 3;
-  width: 400px;
-
+  padding: 2rem;
+  top: 50px;
+  left: 360px;
+  border-radius: 4px;
+  line-height: 1.5rem;
 }
-/* person 2 */
-#home .person_2_grid {
-  display: grid;
-  grid-column: 2;
-  grid-row: 2;
+.person_2_grid {
+  display: flex;
   position: relative;
-  grid-column: 1/ 3;
-
+  justify-content: flex-end;
 }
-#home .person_2 img {
-  position: relative;
-  object-fit: contain;
-  object-position: right;
-  height: 300px;
-  right: 0px;
+.person_2 {
 }
-#home .person_2_text {
+.person_2_text {
   position: absolute;
-  padding: 20px;
+  max-width: 500px;
   background-color: var(--cor-p1);
-  bottom: 20px;
-  right: 200px;
-  z-index: 9;
-  grid-column: 1/ 3;
-  width: 400px;
+  padding: 2rem;
+  top: 100px;
+  right: 360px;
+  border-radius: 4px;
+  display: grid;
+  justify-items: end;
+  line-height: 1.5rem;
+}
+#sobre_nos .tittle {
+  margin-bottom: 40px;
+  font-family: "BS";
+  letter-spacing: 2px;
 }
