--- a/assets/css/utilities/tipografia.css
+++ b/assets/css/utilities/tipografia.css
@@ -12,7 +12,7 @@
 }
 .font-1-m,
 .font-1-m-b {
-  font: 400 1.125rem/1.35 "BS", sans-serif;
+  font: 400 1.125rem/1.35 "Arial Light Regular", sans-serif;
 }
 .font-1-m-b {
   font-weight: 600;
