--- a/assets/css/home/gallery.css
+++ b/assets/css/home/gallery.css
@@ -1,156 +1,31 @@
-#gallery {
-  position: relative;
-}
-.gallery_row {
-  position: relative;
-  height: 70vh;
+.gallery {
+  margin-bottom: 80px;
 }
 .gallery_column {
-  --size: min(60vmin, 4000px);
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  box-shadow: 0 0 10px #0002, 0 20px 40px -20px #0004;
-  width: 100%;
-  height: var(--size);
-  background: #fff;
-  border: 6px solid #fff;
-  display: grid;
-  grid-template-rows: 50% 50%;
-  grid-template-columns: repeat(4, 1fr);
-  overflow: hidden;
-  gap: 6px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1em;
+  transition: all 150ms ease-in-out;
 }
 .gallery_column img {
   width: 100%;
-  height: 100%;
+  border-radius: 0.25rem;
+  height: auto;
   object-fit: cover;
 }
-@keyframes moveHorizontal {
-  to {
-    object-position: 100% 0;
-  }
-}
-@keyframes moveVertical {
-  to {
-    object-position: 0 100%;
-  }
+
+.gallery_column a {
+  flex: 1 1 max(16.5625rem);
+  transition: all 150ms ease-in-out;
+  position: relative;
+  transform: scale(1);
 }
 
-@keyframes shrinkVertical {
-  to {
-    height: 0;
-  }
+.gallery_column:hover > a:hover {
+  transform: scale(1.15);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  z-index: 10;
 }
-
-@keyframes shrinkHorizontal {
-  to {
-    width: 0;
-  }
-}
-
-@keyframes growHorizontal {
-  to {
-    width: 100%;
-  }
-}
-@keyframes growHorizontal2 {
-  to {
-    width: 70%;
-  }
-}
-
-@keyframes growVertical {
-  to {
-    height: 100%;
-  }
-}
-
-@keyframes growAll {
-  to {
-    width: 100%;
-    height: 100%;
-  }
-}
-.gallery_column img:nth-child(1) {
-  grid-column: 1;
-  grid-row: 1;
-  justify-self: end;
-  animation: moveHorizontal 8.5s 0.5s infinite,
-    shrinkHorizontal 2s 9s ease-in infinite;
-}
-
-.gallery_column img:nth-child(2) {
-  grid-column: 2;
-  grid-row: 1;
-  justify-self: end;
-  animation: shrinkHorizontal 2s 11s infinite;
-}
-
-.gallery_column img:nth-child(3) {
-  grid-column: 1 / 3;
-  grid-row: 2;
-  align-self: end;
-  object-position: 0 0;
-  animation: moveVertical 5s 1s infinite, shrinkVertical 3s 8s infinite;
-}
-
-.gallery_column img:nth-child(4) {
-  grid-column: 3;
-  grid-row: 1;
-  width: 0;
-  justify-self: center;
-  align-self: start;
-  animation: growHorizontal 2.25s 1s infinite, moveHorizontal 4s 14s infinite,
-    shrinkVertical 2s 18s infinite;
-}
-
-.gallery_column img:nth-child(5) {
-  grid-column: 4;
-  grid-row: 1;
-  width: 0;
-  justify-self: start;
-  align-self: end;
-  animation: growHorizontal 2.5s 0.5s infinite, moveVertical 4s 12.5s infinite,
-    shrinkHorizontal 2s 17s infinite;
-}
-
-.gallery_column img:nth-child(6) {
-  grid-column: 3;
-  grid-row: 2;
-  width: 0;
-  justify-self: end;
-  align-self: end;
-  animation: growHorizontal 2s 1s infinite, shrinkHorizontal 2s 17s infinite;
-}
-
-.gallery_column img:nth-child(7) {
-  grid-column: 4;
-  grid-row: 2;
-  width: 0;
-  justify-self: end;
-  align-self: end;
-  object-position: 0 0;
-  animation: growHorizontal 2s 1s infinite, shrinkVertical 3s 8s infinite;
-}
-
-.gallery_column img:nth-child(8) {
-  grid-column: 1/3;
-  grid-row: 1/3;
-  width: 0;
-  justify-self: end;
-  align-self: end;
-  object-position: 0 0;
-  animation: growHorizontal 2s 12s infinite, moveHorizontal 1s 2s infinite;
-}
-
-.gallery_column img:nth-child(9) {
-  grid-column: 1/5;
-  grid-row: 1/3;
-  width: 0;
-  justify-self: end;
-  align-self: end;
-  object-position: 0 0;
-  animation: growHorizontal 2s 25s infinite, moveHorizontal 16s 21.5s infinite;
+.gallery_column:hover > a:not(:hover) {
+  opacity: 0.5;
 }
