--- a/css/global/header.css
+++ b/css/global/header.css
@@ -8,7 +8,7 @@
   max-width: 10rem;
 }
 /* Header */
-.header {
+/* .header {
   position: relative;
   display: flex;
   gap: 1rem;
@@ -16,16 +16,53 @@
   padding: 1.5rem;
   align-items: center;
   z-index: 999;
+} */
+.header {
+  position: fixed;
+  z-index: 999;
+  top: 0;
+  left: 0;
+  width: 100%;
+  transition: background-color 0.5s, height 0.5s;
+}
+.header_sticky {
+  background: #fff;
+  -webkit-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.1);
+}
+
+.box {
+  margin-right: auto;
+  margin-left: auto;
+  padding-left: 30px;
+  padding-right: 30px;
+}
+.ur_pos {
+  margin: 20px 0;
+  width: 100%;
+  height: 74px;
+  display: flex;
+  justify-content: space-between;
+  gap: 1em;
+  align-items: center;
 }
 .header_menu_items {
   display: flex;
   gap: clamp(1rem, 3vw, 3rem);
   align-self: center;
   text-transform: uppercase;
-}
-.header_menu_items a {
   color: #735e4f;
 }
+.color_a {
+  color: #fff;
+}
+.filter_svg {
+  filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(0deg) brightness(200%)
+    contrast(100%);
+  transition: 0.3s;
+}
+
 .mobile_nav_toggle {
   display: none;
 }
