--- a/css/global/responsive.css
+++ b/css/global/responsive.css
@@ -1,5 +1,44 @@
 /* responsive header */
 @media (max-width: 35em) {
+  /* persons */
+  #home .person_0_grid {
+    display: block;
+  }
+  #home .person_1_grid {
+    display: none;
+  }
+  #home .person_2_grid {
+    display: none;
+  }
+  /* FOOTER */
+  #footer {
+    /* box-shadow: inset 0px 50px 0px 0px rgb(255, 255, 255); */
+  }
+  .mapa_footer {
+    display: none;
+  }
+  .footer_direitos {
+  }
+  .footer_content {
+    flex-direction: column;
+    justify-content: center;
+    gap: 20px;
+  }
+}
+@media (max-width: 55em) {
+  /* GALLERY */
+
+  #gallery .gallery_column:hover > a:hover {
+    transform: scale(1);
+    z-index: 10;
+  }
+  #gallery .gallery_column:hover > a:hover img {
+    box-shadow: 0 0 0px rgba(0, 0, 0, 0.5);
+  }
+  #gallery .gallery_column:hover > a:not(:hover) {
+    opacity: 1;
+  }
+  /* HEADER  MENU*/
   .header img {
     width: min(30vw, 6.25rem);
   }
@@ -14,10 +53,10 @@
     z-index: 1;
     gap: 2em;
     position: fixed;
-    inset: 0% 0 0 10%;
+    inset: 0% 0 0 20%;
     height: 100%;
     flex-direction: column;
-    padding: min(30vh, 10rem) 2em;
+    padding: min(40vh, 10rem) 2em;
     background: hsl(0 0% 100% / 0.1);
     backdrop-filter: blur(1rem);
     transform: translateX(100%);
@@ -48,32 +87,17 @@
   .mobile_nav_toggle[aria-expanded='true'] {
     background-image: url(../../img/icon/close.svg);
   }
-  /* persons */
-  #home .person_0_grid {
-    display: block;
-  }
-  #home .person_1_grid {
-    display: none;
-  }
-  #home .person_2_grid {
-    display: none;
-  }
-  /* FOOTER */
-  #footer {
-    /* box-shadow: inset 0px 50px 0px 0px rgb(255, 255, 255); */
-  }
-  .mapa_footer {
-    display: none;
-  }
-  .footer_direitos {
-  }
-  .footer_content {
-    flex-direction: column;
-    justify-content: center;
-    gap: 20px;
+  .ur_pos {
+    height: 40px;
   }
 }
+
 @media (min-width: 35em) and (max-width: 55em) {
+  .header_menu_items {
+    /* justify-content: center; */
+
+    padding: 100px 20px;
+  }
   .header img {
     width: min(30vw, 110px);
   }
@@ -114,7 +138,7 @@
 @media (min-width: 35em) {
   .header_menu_items {
     /* gap: clamp(1rem, 5vw, 2rem); */
-    padding-block: 2rem;
+    /* padding-block: 2rem; */
     /* padding-inline: clamp(3rem, 10vw, 10rem); */
   }
 }
