--- a/css/global/responsive.css
+++ b/css/global/responsive.css
@@ -56,11 +56,12 @@
     inset: 0% 0 0 20%;
     height: 100%;
     flex-direction: column;
-    padding: min(40vh, 10rem) 2em;
+    padding: 0;
     background: hsl(0 0% 100% / 0.1);
     backdrop-filter: blur(1rem);
     transform: translateX(100%);
     transition: transform 350ms ease-in-out;
+    justify-content: center;
   }
 
   .header_menu_items[data-visible='true'] {
