--- a/css/components/fonts.css
+++ b/css/components/fonts.css
@@ -1,10 +1,5 @@
 @font-face {
-  font-family: "BS";
-  src: url(/assets/fonts/brown-sugar/brown-sugar.ttf) format("truetype");
-  font-style: normal;
-}
-@font-face {
-  font-family: "BS";
-  src: url(/assets/fonts/brown-sugar/brown-sugar.ttf) format("truetype");
+  font-family: 'BS';
+  src: url(../../fonts/brown-sugar/brown-sugar.ttf) format('truetype');
   font-style: normal;
 }
