--- a/css/components/banner_fix.css
+++ b/css/components/banner_fix.css
@@ -9,7 +9,7 @@
 #banner.banner_fixed {
   background: url('../../img/banner/banner.webp') center center;
   background-size: cover;
-  /* background-attachment: fixed; */
+  background-attachment: fixed;
   background-repeat: no-repeat;
   background-position: center;
 }
