atualização menu hamburguer

--- a/css/global/global.css
+++ b/css/global/global.css
@@ -22,6 +22,11 @@ body {
   color: var(--cor-11);
   overflow: auto;
 }
+body.no-scroll {
+  overflow: hidden; /* Bloqueia o scroll */
+  height: 100%; /* Garante que o body ocupe a altura total */
+}
+
 /* a, ul reset */
 ul {
   padding: 0px;
