--- a/css/utilities/tipografia.css
+++ b/css/utilities/tipografia.css
@@ -8,7 +8,7 @@
   font: 400 1rem/1.5 "Poppins", sans-serif;
 }
 .font-2-s {
-  font: 400 1rem/1.5 "Roboto", sans-serif;
+  font: 400 1rem/1.5 "BS", sans-serif;
 }
 .font-1-m,
 .font-1-m-b {
