--- a/css/global/responsive.css
+++ b/css/global/responsive.css
@@ -46,7 +46,8 @@
     width: min(30vw, 6.25rem);
   }
   .header_menu_items a {
-    color: #ede5de;
+    color: #735e4f;
+    font-weight: 500;
   }
   .header_menu ul li {
     /* margin-right: 40px; */
@@ -56,11 +57,11 @@
     z-index: 1;
     gap: 2em;
     position: fixed;
-    inset: 0% 0 0 20%;
+    inset: 0% 0 0 30%;
     height: 100%;
     flex-direction: column;
     padding: 0;
-    background: hsl(0 0% 100% / 0.1);
+    background: hsla(0, 0%, 100%, 0.5);
     backdrop-filter: blur(1rem);
     transform: translateX(100%);
     transition: transform 350ms ease-in-out;
@@ -98,7 +99,7 @@
     gap: 0;
   }
   #home .sobre_nos h2 {
-    padding:10px 0px ;
+    padding: 10px 0px;
     font-size: 1rem;
   }
 }
